changed some text

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="row hero-unit">
             <div class="container">
                 <div class="hero-caption"><!-- Main Tagline -->
-                    <h1>We Make <span class="colored">Awesome Games</span></h1>
+                    <h1>We make it <span class="colored">Personal</span></h1>
                 </div>
             </div>
         </div>
@@ -120,7 +120,7 @@
             </div>
             <div class="row">
                 <div class="col-md-6">
-                    <p class="small-margin">We are a dedicated team of developers, designers, artists, programmers, and most importantly gaming enthusiasts. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vitae ante pharetra, molestie nunc non, interdum ipsum.</p>
+                    <p class="small-margin">We live and breath the art of interactive media. Every game is tailored to expressing the human experience. We stand out, and are proud of it.</p>
                     <img id="awards" src="images/awards.png" class="img-fluid" alt="awads">
                 </div>
                 <div class="col-md-6">
