Some small changes to text and hero.jpg

--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
                         <figure>
                             <img src="images/placeholder.jpg" data-src="images/team.jpg" class="img-fluid b-lazy" alt="teammember">
                             <figcaption class="team-caption">
-                                <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit.”</p>
+                                <p>“Things are always more complicated than they look.”</p>
                                 <hr class="hr-short">
                                 <ul>
                                     <li><a href="#"><i class="fa fa-facebook fa-lg"></i></a></li>
@@ -454,14 +454,14 @@
                                 </ul>
                             </figcaption>
                         </figure>
-                        <p class="team-name">Vladimir M.</p>
-                        <p class="subtle">Lead Designer</p>
+                        <p class="team-name">Michael Gooch</p>
+                        <p class="subtle">Co-Founder/Lead Designer</p>
                     </div>
                     <div class="col-md-3 team-card">
                         <figure>
                             <img src="images/placeholder.jpg" data-src="images/team.jpg" class="img-fluid b-lazy" alt="teammember">
                             <figcaption class="team-caption">
-                                <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit.”</p>
+                                <p>“Hell yeah!”</p>
                                 <hr class="hr-short">
                                 <ul>
                                     <li><a href="#"><i class="fa fa-facebook fa-lg"></i></a></li>
@@ -470,8 +470,8 @@
                                 </ul>
                             </figcaption>
                         </figure>
-                        <p class="team-name">Asimov R.</p>
-                        <p class="subtle">Founder</p>
+                        <p class="team-name">Jordon Cogswell</p>
+                        <p class="subtle">Co-Founder/Lead Programmer</p>
                     </div>
                     <div class="col-md-3 team-card">
                         <figure>
