--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> 
 
     <!-- WEBSITE TITLE & DESCRIPTION -->
-    <title>Strider - A Game Studio Template</title>
+    <title>Rusted Delusion Studios - We Make It Personal</title>
     <meta name="description" content="The best template for game developers and small studios">
     <meta name="keywords" content="game, gaming, videogame, developer, steam, studio, team">
 
@@ -19,7 +19,7 @@
     <meta property="og:image" content="" /><!-- Image link (jpg only)-->
     <meta property="og:url" content="" /> <!--where do you want your post to link to-->
     <meta property="og:type" content="article" />
-
+	
     <!-- Favicon and Apple Icons -->
     <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="images/favicon/apple-icon-60x60.png">
@@ -82,9 +82,11 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#team">Team</a>
                         </li>
+						<!--
                         <li class="nav-item">
                             <a class="nav-link" href="#careers">Careers</a>
                         </li>
+						-->
                         <li class="nav-item">
                             <a class="nav-link" href="#contact">Contact</a>
                         </li>
@@ -568,179 +570,7 @@
                 </div>
             </div>
         </div>
-        <!-- /// CAREERS SECTION /// -->
-        <div id="careers" class='large-margin'>
-            <a href="careers"></a><!-- Nav Anchor -->
-            <div class="row heading tiny-margin">
-                <div class="col-md-auto">
-                    <h1 class="animation-element slide-down">WE'RE <span class="colored">HIRING</span></h1>
-                </div>
-                <div class="col">
-                    <hr class="animation-element extend">
-                </div>
-            </div>
-            <div class="row medium-margin">
-                <div class="col-md-11">
-                    <h2 class="short-hr-left">JOB OPENINGS</h2>
-                    <p>Are you a talented and motivated individual? Then we would love to have you in our team. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt, nisl non mattis sollicitudin, risus quam tempor sem, vel interdum est libero non odio.</p><br>
-                </div>
-                <div class="col-md-4">
-                    <div class="job-card">
-                        <h3 class="colored">LEAD PROGRAMMER</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        <button class="button" data-toggle="modal" data-target="#modal1">View Details</button>
-                    </div>
-                    <!-- Modal -->
-                    <div class="modal fade" id="modal1" tabindex="-1" role="dialog" aria-labelledby="lead-programmer" aria-hidden="true">
-                        <div class="modal-dialog modal-lg" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h2 class="modal-title colored" id="lead-programmer">LEAD PROGRAMMER</h2>
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
-                                </div>
-                                <div class="modal-body">
-                                    <h3>THE IDEAL CANDIDATE:</h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt, nisl non mattis sollicitudin, risus quam tempor sem, vel interdum est libero non odio.</p>
-                                    <ul class="skill-list">
-                                        <li>C++</li>
-                                        <li>Dream Weaver</li>
-                                        <li>Unreal Engine</li>
-                                        <li>Blender</li>
-                                        <li>Scale Form</li>
-                                    </ul>
-                                    <br>
-                                    <h3>REQUIREMENTS:</h3>
-                                    <ul>
-                                    <li><p>B.Sc. in Computer Science and/or Mathematics</p></li>
-                                    <li><p>Proficient with c++ and object-oriented programming</p></li>
-                                    <li><p>Development experience in the games industry a plus.</p></li>
-                                    <li><p>Strong communication and organizational skills</p></li>
-                                    <li><p>Must work well under pressure and handle multiple tasks</p></li>
-                                    <li><p>Passion for making GREAT games</p></li>
-                                    </ul>
-                                    <br>
-                                    <h3>HOW TO APPLY:</h3>
-                                    <p>If you think you have what it takes to join our team you an apply here <a href="mailto:office@example.com" >office@example.com</a></p>
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="button secondary" data-dismiss="modal">Close</button>
-                                    <a href="mailto:office@example.com" class="button">Apply</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="job-card">
-                        <h3 class="colored">LEVEL DESIGNER</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        <button class="button" data-toggle="modal" data-target="#modal2">View Details</button>
-                    </div>
-                    <!-- Modal -->
-                    <div class="modal fade " id="modal2" tabindex="-1" role="dialog" aria-labelledby="level-designer" aria-hidden="true">
-                        <div class="modal-dialog modal-lg" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h2 class="modal-title colored" id="level-designer">LEVEL DESIGNER</h2>
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
-                                </div>
-                                <div class="modal-body">
-                                    <h3>THE IDEAL CANDIDATE:</h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt, nisl non mattis sollicitudin, risus quam tempor sem, vel interdum est libero non odio.</p>
-                                    <ul class="skill-list">
-                                        <li>C++</li>
-                                        <li>Dream Weaver</li>
-                                        <li>Unreal Engine</li>
-                                        <li>Blender</li>
-                                        <li>Scale Form</li>
-                                    </ul>
-                                    <br>
-                                    <h3>REQUIREMENTS:</h3>
-                                    <ul>
-                                    <li><p>B.Sc. in Computer Science and/or Mathematics</p></li>
-                                    <li><p>Proficient with c++ and object-oriented programming</p></li>
-                                    <li><p>Development experience in the games industry a plus.</p></li>
-                                    <li><p>Strong communication and organizational skills</p></li>
-                                    <li><p>Must work well under pressure and handle multiple tasks</p></li>
-                                    <li><p>Passion for making GREAT games</p></li>
-                                    </ul>
-                                    <br>
-                                    <h3>HOW TO APPLY:</h3>
-                                    <p>If you think you have what it takes to join our team you an apply here <a href="mailto:office@example.com" >office@example.com</a></p>
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="button secondary" data-dismiss="modal">Close</button>
-                                    <a href="mailto:office@example.com" class="button">Apply</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="job-card">
-                        <h3 class="colored">AI ENGINEER</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        <button class="button" data-toggle="modal" data-target="#modal3">View Details</button>
-                    </div>
-                    <!-- Modal -->
-                    <div class="modal fade " id="modal3" tabindex="-1" role="dialog" aria-labelledby="ai-engineer" aria-hidden="true">
-                        <div class="modal-dialog modal-lg" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h2 class="modal-title colored" id="ai-engineer">AI ENGINEER</h2>
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
-                                </div>
-                               <div class="modal-body">
-                                    <h3>THE IDEAL CANDIDATE:</h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt, nisl non mattis sollicitudin, risus quam tempor sem, vel interdum est libero non odio.</p>
-                                    <ul class="skill-list">
-                                        <li>C++</li>
-                                        <li>Dream Weaver</li>
-                                        <li>Unreal Engine</li>
-                                        <li>Blender</li>
-                                        <li>Scale Form</li>
-                                    </ul>
-                                    <br>
-                                    <h3>REQUIREMENTS:</h3>
-                                    <ul>
-                                    <li><p>B.Sc. in Computer Science and/or Mathematics</p></li>
-                                    <li><p>Proficient with c++ and object-oriented programming</p></li>
-                                    <li><p>Development experience in the games industry a plus.</p></li>
-                                    <li><p>Strong communication and organizational skills</p></li>
-                                    <li><p>Must work well under pressure and handle multiple tasks</p></li>
-                                    <li><p>Passion for making GREAT games</p></li>
-                                    </ul>
-                                    <br>
-                                    <h3>HOW TO APPLY:</h3>
-                                    <p>If you think you have what it takes to join our team you an apply here <a href="mailto:office@example.com" >office@example.com</a></p>
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="button secondary" data-dismiss="modal">Close</button>
-                                    <a href="mailto:office@example.com" class="button">Apply</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12 text-center">
-                    <h2 class="short-hr-center">OUR NEWSLETTER</h2>
-                    <p>Stay up to date with the team and our products by subscribing to our newsletter.</p>
-                    <form id="newsletter" data-toggle="validator">
-                        <input type="email" id="emailsign" placeholder="Your email adress"> <!-- Email Field -->
-                        <button type="submit" id="form-signup" class="button">SUBSCRIBE</button>
-                        <div id="msgSignup" class="h3 text-center hidden"></div>
-                    </form>
-                </div>
-            </div>
-        </div>
+		
         <!-- /// CONTACT SECTION /// -->
         <div id="contact" class="large-margin">
             <a href="contact"></a><!-- Nav Anchor -->
