Add image instead of text for About Us

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <a href="about"></a><!-- Nav Anchor -->
             <div class="row heading tiny-margin">
                 <div class="col-md-auto">
-                    <h1 class="animation-element slide-down">ABOUT <span class="colored">US</span></h1>
+                    <h1 class="animation-element slide-down"><img src="images/WhoWeAre.png"></h1>
                 </div>
                 <div class="col">
                     <hr class="animation-element extend">
