Added What We Make image for Games Section

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <a href="games"></a><!-- Nav Anchor -->
             <div class="row heading tiny-margin">
                 <div class="col-md-auto">
-                    <h1 class="animation-element slide-down">OUR <span class="colored">GAMES</span></h1>
+                    <h1 class="animation-element slide-down"><img src="images/WhatWeMake.png"></h1>
                 </div>
                 <div class="col">
                     <hr class="animation-element extend">
