--- a/index.html
+++ b/index.html
@@ -121,8 +121,10 @@
                 </div>
                 <div class="col">
                     <hr class="animation-element extend">
+			<div class="col-md-11">
+                        <p>We were born to create. Developing games that touch on the human experince is what we do. We stand out, and are proud of it.</p>
+                        </div>
                 </div>
-            </div>
             </div>
             <div class="row medium-margin">
                 <div id="full-row" class="row text-center">
@@ -158,9 +160,6 @@
                         <p class="team-name">Jordon Cogswell</p>
                         <p class="subtle">Co-Founder/Lead Programmer</p>
                     </div>
-                </div>
-                <div class="col-md-6">
-                    <img id="support-image" src="images/placeholder.jpg" data-src="images/about.jpg" class="img-fluid b-lazy" alt="digital collage">
                 </div>
             </div>
         </div>
