--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 </div>
                 <div class="col">
                     <hr class="animation-element extend">
-			<div class="col-md-11">
+			<div class="col-md-11 small-margin">
                         <p>We were born to create. Developing games that touch on the human experince is what we do. We stand out, and are proud of it.</p>
                         </div>
                 </div>
@@ -148,7 +148,7 @@
                         <figure>
                             <img src="images/placeholder.jpg" data-src="images/team.jpg" class="img-fluid b-lazy" alt="teammember">
                             <figcaption class="team-caption">
-                                <p>“Hell yeah!”</p>
+                                <p>“Hell yeah! Ima gonna mess some shit up!(Placeholder)”</p>
                                 <hr class="hr-short">
                                 <ul>
                                     <li><a href="#"><i class="fa fa-facebook fa-lg"></i></a></li>
