--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
             <a href="contact"></a><!-- Nav Anchor -->
             <div class="row heading tiny-margin">
                 <div class="col-md-auto">
-                    <h1 class="animation-element slide-down">GET IN <span class="colored">TOUCH</span></h1>
+                    <h1 class="animation-element slide-down"><img src="images/Connect.png"></h1>
                 </div>
                 <div class="col">
                     <hr class="animation-element extend">
