Trying to fix spacing

--- a/index.html
+++ b/index.html
@@ -120,9 +120,8 @@
                     <h1 class="animation-element slide-down"><img src="images/WhoWeAre.png"></h1>
                 </div>
                 <div class="col">
-                    <hr class="animation-element extend">
 			<div class="col-md-11 small-margin">
-                        <p>We were born to create. Developing games that touch on the human experince is what we do. We stand out, and are proud of it.</p>
+                        <p>We were born to create. Developing games that touch on the human experience is what we do. We stand out, and are proud of it.</p>
                         </div>
                 </div>
             </div>
