Still trying to fix spacing

--- a/index.html
+++ b/index.html
@@ -115,10 +115,14 @@
         <!-- /// ABOUT SECTION /// -->
         <div id="about" class="large-margin">
             <a href="about"></a><!-- Nav Anchor -->
-            <div class="row heading tiny-margin">
+             <div class="row heading tiny-margin">
                 <div class="col-md-auto">
-                    <h1 class="animation-element slide-down"><img src="images/WhoWeAre.png"></h1>
+                    <h1 class="animation-element slide-down"><img src="images/WhatWeMake.png"></h1>
                 </div>
+                <div class="col">
+                    <hr class="animation-element extend">
+                </div>
+             </div>
                 <div class="col">
 			<div class="col-md-11 small-margin">
                         <p>We were born to create. Developing games that touch on the human experience is what we do. We stand out, and are proud of it.</p>
