--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 </div>
             </div>
                 <div class="col">
-			        <div class="col-md-11 small-margin">
+		    <div class="col-md-11">
                         <p>We were born to create. Developing games that touch on the human experience is what we do. We stand out, and are proud of it.</p>
                     </div>
                 </div>
