--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             <div class="">
                 <div class="row small-margin">
                     <div class="col-md-11">
-                        <p>We would love to hear from you. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer viverra laoreet dolor sit amet blandit. Ut suscipit nisl ut risus volutpat malesuada.</p>
+                        <p>Want to talk? We are always open to hearing from anyone, so send us an email. </p>
                     </div>
                 </div>
                 <div class="row">
@@ -302,14 +302,9 @@
                         <h2 class="short-hr-left">OUR DETAILS</h2>
                         <div id="contact-info">
                             <ul>
-                                <li><i class="fa fa-phone"></i><p>Phone: <span class="colored"><a href="tel:+1(803)635585">+1 (803) 635 585</a></span></p></li>
                                 <li><i class="fa fa-envelope"></i><p>Email: <span class="colored"><a href="mailto:office@example.com">office@example.com</a></span></p></li>
-                                <li><i class="fa fa-globe"></i><p>Website: <span class="colored"><a href="www.atypicalthemes.com" target="_blank">www.atypicalthemes.com</a></span></p></li>
-                                <li><i class="fa fa-map-marker"></i><p>Address: <span class="colored">1168 12th Street East Oconomowoc, WI 53066</span></p></li>
                             </ul>
                         </div>
-                        <!-- Google Map -->
-                        <div id="map-canvas"></div>
                     </div>
                 </div>
             </div>
