--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
    <!-- Loading Screen -->
     <div id="loader-wrapper">
-        <h1 class="loader-logo"><span class="colored">S</span>TRIDER</h1>
+        <h1 class="loader-logo"><img src="images/logo.png"></h1>
         <div id="progress"></div>
         <h3 class="loader-text">LOADING</h3>
     </div>
