Fixed the spacing issue. Changed loading logo

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
    <!-- Loading Screen -->
     <div id="loader-wrapper">
-        <h1 class="loader-logo"><img src="images/logo.png"></h1>
+        <h1 class="loader-logo"><img src="images/FullLogo.png"></h1>
         <div id="progress"></div>
         <h3 class="loader-text">LOADING</h3>
     </div>
@@ -113,11 +113,11 @@
                     <hr class="animation-element extend">
                 </div>
             </div>
-                <div class="col">
-		    <div class="col-md-11">
-                        <p>We were born to create. Developing games that touch on the human experience is what we do. We stand out, and are proud of it.</p>
-                    </div>
+            <div class="row">
+		        <div class="col-md-6">
+                    <p class="small-margin">We were born to create. Developing games that touch on the human experience is what we do. We stand out, and are proud of it.</p>
                 </div>
+            </div>
             <div class="row medium-margin">
                 <div id="full-row" class="row text-center">
                     <div class="col-md-3 team-card">
