Organizing the content

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                             <a class="nav-link" href="#games">What We Make</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#contact">Contact</a>
+                            <a class="nav-link" href="#contact">Connect</a>
                         </li>
                     </ul>
                 </div>
@@ -114,17 +114,18 @@
                 </div>
             </div>
             <div class="row">
-		        <div class="col-md-6">
+		        <div class="col-md-11 small-margin>
                     <p class="small-margin">We were born to create. Developing games that touch on the human experience is what we do. We stand out, and are proud of it.</p>
                 </div>
             </div>
-            <div class="row medium-margin">
-                <div id="full-row" class="row text-center">
+
+            <div id="team" class="row medium-margin">
+                 <div id="full-row" class="row text-center">
                     <div class="col-md-3 team-card">
                         <figure>
                             <img src="images/placeholder.jpg" data-src="images/team.jpg" class="img-fluid b-lazy" alt="teammember">
                             <figcaption class="team-caption">
-                                <p>“Things are always more complicated than they look.”</p>
+                                <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit.”</p>
                                 <hr class="hr-short">
                                 <ul>
                                     <li><a href="#"><i class="fa fa-facebook fa-lg"></i></a></li>
@@ -140,7 +141,7 @@
                         <figure>
                             <img src="images/placeholder.jpg" data-src="images/team.jpg" class="img-fluid b-lazy" alt="teammember">
                             <figcaption class="team-caption">
-                                <p>“Hell yeah! Ima gonna mess some shit up!(Placeholder)”</p>
+                                <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit.”</p>
                                 <hr class="hr-short">
                                 <ul>
                                     <li><a href="#"><i class="fa fa-facebook fa-lg"></i></a></li>
@@ -149,12 +150,16 @@
                                 </ul>
                             </figcaption>
                         </figure>
-                        <p class="team-name">Jordon Cogswell</p>
+                        <p class="team-name">Jordan Cogswell</p>
                         <p class="subtle">Co-Founder/Lead Programmer</p>
                     </div>
+					<div class="col-md-6">
+                    <img id="support-image" src="images/placeholder.jpg" data-src="images/about.jpg" class="img-fluid b-lazy" alt="digital collage">
                 </div>
-            </div>
+                 </div>
+		     </div>
 	    </div>
+
         <!-- /// GAMES SECTION /// -->
         <div id="games" class="large-margin">
             <a href="games"></a><!-- Nav Anchor -->
