--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="row hero-unit">
             <div class="container">
                 <div class="hero-caption"><!-- Main Tagline -->
-                    <h1>We make it <span class="colored">Personal</span></h1>
+                    <h1>We make it <span class="colored">D</span>ifferent <br> We make it <span class="colored">P</span>ersonal</h1>
                 </div>
             </div>
         </div>
@@ -123,14 +123,13 @@
                  <div id="full-row" class="row text-center">
                     <div class="col-md-3 team-card">
                         <figure>
-                            <img src="images/placeholder.jpg" data-src="images/team.jpg" class="img-fluid b-lazy" alt="teammember">
+                            <img src="images/placeholder.jpg" data-src="images/gooch_Team.jpg" class="img-fluid b-lazy" alt="teammember">
                             <figcaption class="team-caption">
-                                <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit.”</p>
+                                <p>“I can't imagine doing anything else.”</p>
                                 <hr class="hr-short">
                                 <ul>
-                                    <li><a href="#"><i class="fa fa-facebook fa-lg"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-twitter fa-lg"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-linkedin fa-lg"></i></a></li>
+                                    <li><a href="https://twitter.com/This_Gooch"><i class="fa fa-twitter fa-lg"></i></a></li>
+                                    <li><a href="https://www.linkedin.com/in/mgooch0190/"><i class="fa fa-linkedin fa-lg"></i></a></li>
                                 </ul>
                             </figcaption>
                         </figure>
@@ -139,14 +138,12 @@
                     </div>
                     <div class="col-md-3 team-card">
                         <figure>
-                            <img src="images/placeholder.jpg" data-src="images/team.jpg" class="img-fluid b-lazy" alt="teammember">
+                            <img src="images/placeholder.jpg" data-src="images/jordan_Team.jpg" class="img-fluid b-lazy" alt="teammember">
                             <figcaption class="team-caption">
-                                <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit.”</p>
+                                <p>"Excellence in playing games, and making them!"</p>
                                 <hr class="hr-short">
                                 <ul>
-                                    <li><a href="#"><i class="fa fa-facebook fa-lg"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-twitter fa-lg"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-linkedin fa-lg"></i></a></li>
+                                    <li><a href="https://www.linkedin.com/in/jordancogswell/"><i class="fa fa-linkedin fa-lg"></i></a></li>
                                 </ul>
                             </figcaption>
                         </figure>
@@ -173,7 +170,7 @@
             </div>
             <div class="row ">
                 <div class="col-md-11 small-margin">
-                   <p>Here at Strider games we pride ourselves in delivering rich and polished experiences that our fanbase can enjoy and immerse themselve into. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse facilisis rhoncus nibh.</p>
+                   <p>Every game we create tries to do something different. We won't settle for the predictable and always welcome a new challenge. The world is full of inspiration and it would be a shame to only touch on a fraction of it.</p>
                 </div>
 				<!--
                 <div class="col-md-12">
@@ -196,7 +193,7 @@
                                 <i class="fa fa-picture-o fa-3x"></i>
                             </div>
                             <picture>
-                                <source media="(min-width: 1200px)" srcset="images/game.jpg">
+                                <source media="(min-width: 1200px)" srcset="images/OTFS_SmallGameImage.jpg">
                                 <source media="(min-width: 768px)" srcset="images/game_large.jpg">
                                 <img src="images/placeholder.jpg" data-src="images/game.jpg" class="img-fluid b-lazy" alt="aurora image">
                             </picture>
@@ -207,15 +204,17 @@
                     <div class="col-lg-12 col-xl-7 game-card-right">
                         <h2 class="short-hr-left">ON THE FLIP SIDE</h2>
                         <p class="tags"><span class="subtle">Adventure | Mobile</span></p>
-                        <p class="game-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse facilisis rhoncus nibh. Phasellus dignissim luctus consectetur. Fusce viverra est non purus ultrices, vel molestie massa tincidunt. <span class="expand colored strong" data-toggle="modal" data-target="#game2">Read More</span></p>
+                        <p class="game-description">Old is new again in this funky foot tapping endless runner for mobile. All you need to do is tap change the world around you, all while corporate manifestations try to bring you down. Are you ready to flip to the other side?</p>
                         <a href="#" class="button-store">
                             <i class="fa fa-android fa-2x"></i>
                             <p>Available on<br><span class="strong">Google Play</span></p>
                         </a>
+						<!--
                         <a href="#" class="button-store">
                             <i class="fa fa-apple fa-2x"></i>
                             <p>Available on<br><span class="strong">Apple Store</span></p>
                        </a>
+
                         <div class="rating">
                             <p class="strong">4.1</p>
                             <ul>
@@ -226,6 +225,7 @@
                                 <li><i class="fa fa-star-o"></i></li>
                             </ul>
                         </div>
+						-->
                     </div>
                     <!-- Modal -->
                     <div class="modal fade game-modal" id="game4" tabindex="-1" role="dialog" aria-labelledby="echo" aria-hidden="true">
