--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#about">Who We Are</a>
+                            <a class="nav-link" href="#about">WHO WE A<span class="colored1">R</span>E</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#games">What We Make</a>
+                            <a class="nav-link" href="#games">WHAT WE <span class="colored1">D</span>O</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#contact">Connect</a>
+                            <a class="nav-link" href="#contact">CONTACT U<span class="colored1">S</span></a>
                         </li>
                     </ul>
                 </div>
@@ -94,7 +94,7 @@
         <div class="row hero-unit">
             <div class="container">
                 <div class="hero-caption"><!-- Main Tagline -->
-                    <h1>We make it <span class="colored">D</span>ifferent <br> We make it <span class="colored">P</span>ersonal</h1>
+                    <h1>We make it <span class="colored2">D</span>ifferent<br> We make it <span class="colored1">P</span>ersonal</h1>
                 </div>
             </div>
         </div>
@@ -203,12 +203,11 @@
                     </div>
                     <div class="col-lg-12 col-xl-7 game-card-right">
                         <h2 class="short-hr-left">ON THE FLIP SIDE</h2>
-                        <p class="tags"><span class="subtle">Adventure | Mobile</span></p>
+                        <p class="tags"><span class="subtle">Arcade | Mobile</span></p>
                         <p class="game-description">Old is new again in this funky foot tapping endless runner for mobile. All you need to do is tap change the world around you, all while corporate manifestations try to bring you down. Are you ready to flip to the other side?</p>
-                        <a href="#" class="button-store">
-                            <i class="fa fa-android fa-2x"></i>
-                            <p>Available on<br><span class="strong">Google Play</span></p>
-                        </a>
+                        <a href='https://play.google.com/store/apps/details?id=com.GoochNCogswell.TimeShiftGame&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
+						<img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png' width="220" height="90"/>
+						</a>
 						<!--
                         <a href="#" class="button-store">
                             <i class="fa fa-apple fa-2x"></i>
@@ -218,10 +217,10 @@
                         <div class="rating">
                             <p class="strong">4.1</p>
                             <ul>
-                                <li><i class="fa fa-star colored"></i></li>
-                                <li><i class="fa fa-star colored"></i></li>
-                                <li><i class="fa fa-star colored"></i></li>
-                                <li><i class="fa fa-star colored"></i></li>
+                                <li><i class="fa fa-star colored1"></i></li>
+                                <li><i class="fa fa-star colored1"></i></li>
+                                <li><i class="fa fa-star colored1"></i></li>
+                                <li><i class="fa fa-star colored1"></i></li>
                                 <li><i class="fa fa-star-o"></i></li>
                             </ul>
                         </div>
@@ -307,7 +306,7 @@
                         <h2 class="short-hr-left">OUR DETAILS</h2>
                         <div id="contact-info">
                             <ul>
-                                <li><i class="fa fa-envelope"></i><p>Email: <span class="colored"><a href="mailto:office@example.com">office@example.com</a></span></p></li>
+                                <li><i class="fa fa-envelope"></i><p>Email: <span class="colored1"><a href="mailto:office@example.com">office@example.com</a></span></p></li>
                             </ul>
                         </div>
                     </div>
