--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                             <picture>
                                 <source media="(min-width: 1200px)" srcset="images/OTFS_SmallGameImage.jpg">
                                 <source media="(min-width: 768px)" srcset="images/game_large.jpg">
-                                <img src="images/placeholder.jpg" data-src="images/game.jpg" class="img-fluid b-lazy" alt="aurora image">
+                                <img src="images/placeholder.jpg" data-src="images/OTFS_SmallGameImage.jpg" class="img-fluid b-lazy" alt="aurora image">
                             </picture>
                         </a>
                         <a href="images/game_large.jpg" data-lightbox="screenshots_dark"></a>
