--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                     <div class="col-lg-12 col-xl-7 game-card-right">
                         <h2 class="short-hr-left">ON THE FLIP SIDE</h2>
                         <p class="tags"><span class="subtle">Arcade | Mobile</span></p>
-                        <p class="game-description">Old is new again in this funky foot tapping endless runner for mobile. All you need to do is tap change the world around you, all while corporate manifestations try to bring you down. Are you ready to flip to the other side?</p>
+                        <p class="game-description">Old is new again in this funky foot tapping endless runner for mobile. All you need to do is tap to change the world around you, all while corporate manifestations try to bring you down. Are you ready to flip to the other side?</p>
                         <a href='https://play.google.com/store/apps/details?id=com.GoochNCogswell.TimeShiftGame&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
 						<img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png' width="220" height="90"/>
 						</a>
