--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     </div>
                     <div class="col-md-3 team-card">
                         <figure>
-                            <img src="images/placeholder.jpg" data-src="images/jordan_Team.jpg" class="img-fluid b-lazy" alt="teammember">
+                            <img src="images/jordan_TestTeam.jpg" data-src="images/jordan_Team.jpg" class="img-fluid b-lazy" alt="teammember">
                             <figcaption class="team-caption">
                                 <p>"Excellence in playing games, and making them!"</p>
                                 <hr class="hr-short">
