--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     </div>
                     <div class="col-md-3 team-card">
                         <figure>
-						<div class="team">
+						<div class="figure">
                             <img src="images/placeholder.jpg" data-src="images/jordan_Team.jpg" class="img-fluid b-lazy" alt="teammember">
 							<img src="images/placeholder.jpg" data-src="images/jordanTest_Team.jpg" class="img-fluid b-lazy" class="img-top" alt="teammember">
 							</div>
