--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                  <div id="full-row" class="row text-center">
                     <div class="col-md-3 team-card">
                         <figure>
-                            <img src="images/placeholder.jpg" data-src="images/gooch_Team.jpg" class="img-fluid b-lazy" alt="teammember">
+                            <img src="images/placeholder.jpg" data-src="images/goochVHS_Team.jpg" class="img-fluid b-lazy" alt="teammember">
                             <figcaption class="team-caption">
                                 <p>“I can't imagine doing anything else.”</p>
                                 <hr class="hr-short">
@@ -138,7 +138,7 @@
                     </div>
                     <div class="col-md-3 team-card">
                         <figure>
-                            <img src="images/placeholder.jpg" data-src="images/jordan_Team.jpg" class="img-fluid b-lazy" alt="teammember">
+                            <img src="images/placeholder.jpg" data-src="images/cogswellVHS_Team.jpg" class="img-fluid b-lazy" alt="teammember">
                             <figcaption class="team-caption">
                                 <p>"Excellence in playing games, and making them!"</p>
                                 <hr class="hr-short">
