--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                         <p class="subtle">Co-Founder/Lead Programmer</p>
                     </div>
 					<div class="col-md-6">
-                    <img id="support-image" src="images/placeholder.jpg" data-src="images/about.jpg" class="img-fluid b-lazy" alt="digital collage">
+                    <img id="support-image" src="images/placeholder.jpg" data-src="images/arcade_FillerPic.jpg" class="img-fluid b-lazy" alt="digital collage">
                 </div>
                  </div>
 		     </div>
