Added company email.

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                         <h2 class="short-hr-left">OUR DETAILS</h2>
                         <div id="contact-info">
                             <ul>
-                                <li><i class="fa fa-envelope"></i><p>Email: <span class="colored1"><a href="mailto:office@example.com">office@example.com</a></span></p></li>
+                                <li><i class="fa fa-envelope"></i><p>Email: <span class="colored1"><a href="mailto:contact@rusteddelusion.com">contact@rusteddelusion.com</a></span></p></li>
                             </ul>
                         </div>
                     </div>
@@ -322,12 +322,11 @@
                     <div class="col-md-12">
                         <p id="copyright">&copy; Atypical Themes <span id="year"> </span></p><!-- Copyright Text -->
                         <ul class="social-links"> <!-- Social Media Icons -->
-                            <li><a href="#"><i class="fa fa-facebook fa-lg icon-social"></i></a></li>
+                           <!-- <li><a href="#"><i class="fa fa-facebook fa-lg icon-social"></i></a></li>-->
                             <li><a href="#"><i class="fa fa-twitter  fa-lg icon-social"></i></a></li>
-                            <li><a href="#"><i class="fa fa-google-plus fa-lg icon-social"></i></a></li>
-                            <li><a href="#"><i class="fa fa-linkedin fa-lg icon-social"></i></a>
-                            <li><a href="#"><i class="fa fa-pinterest fa-lg icon-social"></i></a>
-                            <li><a href="#"><i class="fa fa-instagram fa-lg icon-social"></i></a>
+                           <!-- <li><a href="#"><i class="fa fa-linkedin fa-lg icon-social"></i></a> -->
+                          <!--  <li><a href="#"><i class="fa fa-pinterest fa-lg icon-social"></i></a> -->
+                          <!--  <li><a href="#"><i class="fa fa-instagram fa-lg icon-social"></i></a> -->
                         </ul>
                     </div>
                 </div>
