--- a/index.html
+++ b/index.html
@@ -281,8 +281,8 @@
                         <h2 class="short-hr-left">LEAVE US A MESSAGE</h2>
                         <form id="contactForm" data-toggle="validator">
                             <div class="form-group">
-                                <!-- Name Field -->
-                                <input type="text" id="name" placeholder="Name*" required size="35" data-error="Name is required">
+                                <!-- Subject Field -->
+                                <input type="text" id="subject" placeholder="Subject*" required size="35" data-error="Subject is required">
                                 <div class="help-block with-errors"></div>
                             </div>
                             <div class="form-group">
