Removed contact form as there is not much point in having it if people can just email us. Added twitter link.

--- a/index.html
+++ b/index.html
@@ -273,40 +273,16 @@
             <div class="">
                 <div class="row small-margin">
                     <div class="col-md-11">
-                        <p>Want to talk? We are always open to hearing from anyone, so send us an email. </p>
+                        <p>Want to talk? Like what you see? Feel free to contact us or follow us on the following social media platforms. </p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-6">
-                        <h2 class="short-hr-left">LEAVE US A MESSAGE</h2>
-                        <form id="contactForm" data-toggle="validator">
-                            <div class="form-group">
-                                <!-- Subject Field -->
-                                <input type="text" id="subject" placeholder="Subject*" required size="35" data-error="Subject is required">
-                                <div class="help-block with-errors"></div>
-                            </div>
-                            <div class="form-group">
-                                <!-- Email Field -->
-                                <input type="email" id="email" placeholder="Email*" required size="35" data-error="Email is required">
-                                <div class="help-block with-errors"></div>
-                            </div>
-                            <div class="form-group">
-                                <!-- Message Field -->
-                                <textarea id="message" name="message" placeholder="Message*" required data-error="Message cannot be empty"></textarea>
-                                <p class="subtle">* required field</p>
-                                <div class="help-block with-errors"></div>
-                                <!-- Submit Button -->
-                                <button type="submit" class="button">SEND MESSAGE</button>
-                                <!-- Success Message -->
-                                <div id="msgSubmit" class="text-center hidden"></div>
-                            </div>
-                        </form>
-                    </div>
                     <div class="col-md-6">
                         <h2 class="short-hr-left">OUR DETAILS</h2>
                         <div id="contact-info">
                             <ul>
                                 <li><i class="fa fa-envelope"></i><p>Email: <span class="colored1"><a href="mailto:contact@rusteddelusion.com">contact@rusteddelusion.com</a></span></p></li>
+								<li><i class="fa fa-twitter  fa-lg icon-social"></i><p>Twitter: <span class="colored1"><a href="https://twitter.com/RustedDelusion">@rusteddelusion</a></span></p></li>
                             </ul>
                         </div>
                     </div>
