--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 <!-- Game Card -->
                 <div class="row game-card mobile">
                     <div class="col-lg-12 col-xl-5 game-card-left">
-                        <a href="images/game_large.jpg" data-lightbox="screenshots_dark">
+                        <a href="images/OTFS_ExamplePic1.png" data-lightbox="screenshots_dark">
                             <div class="overlay">
                                 <i class="fa fa-picture-o fa-3x"></i>
                             </div>
@@ -198,8 +198,8 @@
                                 <img src="images/placeholder.jpg" data-src="images/OTFS_SmallGameImage.jpg" class="img-fluid b-lazy" alt="aurora image">
                             </picture>
                         </a>
-                        <a href="images/game_large.jpg" data-lightbox="screenshots_dark"></a>
-                        <a href="images/game_large.jpg" data-lightbox="screenshots_dark"></a>
+                        <a href="images/OTFS_ExamplePic2.png" data-lightbox="screenshots_dark"></a>
+                        <a href="images/OTFS_ExamplePic3.png" data-lightbox="screenshots_dark"></a>
                     </div>
                     <div class="col-lg-12 col-xl-7 game-card-right">
                         <h2 class="short-hr-left">ON THE FLIP SIDE</h2>
