Added Discord Link
Still need image

--- a/index.html
+++ b/index.html
@@ -282,7 +282,8 @@
                         <div id="contact-info">
                             <ul>
                                 <li><i class="fa fa-envelope"></i><p>Email: <span class="colored1"><a href="mailto:contact@rusteddelusion.com">contact@rusteddelusion.com</a></span></p></li>
-								<li><i class="fa fa-twitter  fa-lg icon-social"></i><p>Twitter: <span class="colored1"><a href="https://twitter.com/RustedDelusion">@rusteddelusion</a></span></p></li>
+			        <li><i class="fa fa-twitter  fa-lg icon-social"></i><p>Twitter: <span class="colored1"><a href="https://twitter.com/RustedDelusion">@rusteddelusion</a></span></p></li>
+				<li><i class="#"></i><p>Discord: <span class="colored1"><a href="https://discord.gg/2gwBRgp">Rusted Delusion Studios</a></span></p></li>
                             </ul>
                         </div>
                     </div>
