Added rel="noopener noreferrer" to links for security

--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
                                 <p>“I can't imagine doing anything else.”</p>
                                 <hr class="hr-short">
                                 <ul>
-                                    <li><a href="https://twitter.com/This_Gooch" target="_blank"><i class="fa fa-twitter fa-lg"></i></a></li>
-                                    <li><a href="https://www.linkedin.com/in/mgooch0190/" target="_blank"><i class="fa fa-linkedin fa-lg"></i></a></li>
+                                    <li><a href="https://twitter.com/This_Gooch" target="_blank" rel="noopener noreferrer"><i class="fa fa-twitter fa-lg"></i></a></li>
+                                    <li><a href="https://www.linkedin.com/in/mgooch0190/" target="_blank" rel="noopener noreferrer"><i class="fa fa-linkedin fa-lg"></i></a></li>
                                 </ul>
                             </figcaption>
                         </figure>
@@ -143,7 +143,7 @@
                                 <p>"Excellence in playing games, and making them!"</p>
                                 <hr class="hr-short">
                                 <ul>
-                                    <li><a href="https://www.linkedin.com/in/jordancogswell/" target="_blank"><i class="fa fa-linkedin fa-lg"></i></a></li>
+                                    <li><a href="https://www.linkedin.com/in/jordancogswell/" target="_blank" rel="noopener noreferrer"><i class="fa fa-linkedin fa-lg"></i></a></li>
                                 </ul>
                             </figcaption>
                         </figure>
@@ -205,7 +205,7 @@
                         <h2 class="short-hr-left">ON THE FLIP SIDE</h2>
                         <p class="tags"><span class="subtle">Arcade | Mobile</span></p>
                         <p class="game-description">Old is new again in this funky foot tapping endless runner for mobile. All you need to do is tap to change the world around you, all while corporate manifestations try to bring you down. Are you ready to flip to the other side?</p>
-                        <a href='#' target="_blank">
+                        <a href='#' target="_blank" rel="noopener noreferrer">
 						<img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png' width="220" height="90"/>
 						</a>
 						<!--
@@ -281,9 +281,9 @@
                         <h2 class="short-hr-left">OUR DETAILS</h2>
                         <div id="contact-info">
                             <ul>
-                                <li><i class="fa fa-envelope"></i><p>Email: <span class="colored1"><a href="mailto:contact@rusteddelusion.com" target="_blank">contact@rusteddelusion.com</a></span></p></li>
-			                    <li><i class="fa fa-twitter  fa-lg icon-social"></i><p>Twitter: <span class="colored1"><a href="https://twitter.com/RustedDelusion" target="_blank">@rusteddelusion</a></span></p></li>
-				                <li><i class="#"></i><p>Discord: <span class="colored1"><a href="https://discord.gg/2gwBRgp" target="_blank">Rusted Delusion Studios</a></span></p></li>
+                                <li><i class="fa fa-envelope"></i><p>Email: <span class="colored1"><a href="mailto:contact@rusteddelusion.com">contact@rusteddelusion.com</a></span></p></li>
+			                    <li><i class="fa fa-twitter  fa-lg icon-social"></i><p>Twitter: <span class="colored1"><a href="https://twitter.com/RustedDelusion" target="_blank" rel="noopener noreferrer">@rusteddelusion</a></span></p></li>
+				                <li><i class="#"></i><p>Discord: <span class="colored1"><a href="https://discord.gg/2gwBRgp" target="_blank" rel="noopener noreferrer">Rusted Delusion Studios</a></span></p></li>
                             </ul>
                         </div>
                     </div>
