Changed Google search description

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
     <!-- WEBSITE TITLE & DESCRIPTION -->
     <title>Rusted Delusion Studios - We Make It Personal</title>
-    <meta name="description" content="The best template for game developers and small studios">
-    <meta name="keywords" content="game, gaming, videogame, developer, steam, studio, team">
+    <meta name="description" content="We were born to create. Developing games that touch on the human experience is what we do. We stand out, and are proud of it.">
+    <meta name="keywords" content="game, gaming, videogame, developer, steam, studio, team, mobile, android, apple, indie, independent, art">
 
     <!-- OG meta tags that improve the look of your post on social media -->
     <meta property="og:site_name" content="" /><!--website name-->
