--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> 
 
     <!-- WEBSITE TITLE & DESCRIPTION -->
-    <title>Rusted Delusion Studios - We Make It Personal</title>
+    <title>Rusted Delusion Studios</title>
     <meta name="description" content="We were born to create. Developing games that touch on the human experience is what we do. We stand out, and are proud of it.">
     <meta name="keywords" content="game, gaming, videogame, developer, steam, studio, team, mobile, android, apple, indie, independent, art">
 
