Updated background. Coloured the twitter icon to twitter blue

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <!-- META TAGS -->
     <meta charset="utf-8">
-    <meta name="author" content="AtypicalThemes">
+    <meta name="author" content="Rusted Delusion Studios">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> 
 
     <!-- WEBSITE TITLE & DESCRIPTION -->
@@ -12,13 +12,13 @@
     <meta name="keywords" content="game, gaming, videogame, developer, steam, studio, team, mobile, android, apple, indie, independent, art">
 
     <!-- OG meta tags that improve the look of your post on social media -->
-    <meta property="og:site_name" content="" /><!--website name-->
-    <meta property="og:site" content="" /> <!--website link-->
-    <meta property="og:title" content=""/> <!--Post title-->
-    <meta property="og:description" content="" /> <!--Post description-->
-    <meta property="og:image" content="" /><!-- Image link (jpg only)-->
-    <meta property="og:url" content="" /> <!--where do you want your post to link to-->
-    <meta property="og:type" content="article" />
+    <meta property="og:site_name" content="Rusted Delusion Studios" /><!--website name-->
+    <meta property="og:site" content="rusteddelusion.com" /> <!--website link-->
+    <meta property="og:title" content="Rusted Delusion Studios"/> <!--Post title-->
+    <meta property="og:description" content="We make it Different. We make it Personal." /> <!--Post description-->
+    <meta property="og:image" content="images/FullLogo.png" /><!-- Image link (jpg only)-->
+    <meta property="og:url" content="https://rusteddelusion.com/" /> <!--where do you want your post to link to-->
+    <meta property="og:type" content="game" />
 	
     <!-- Favicon and Apple Icons -->
     <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57.png">
@@ -281,9 +281,9 @@
                         <h2 class="short-hr-left">OUR DETAILS</h2>
                         <div id="contact-info">
                             <ul>
-                                <li><i class="fa fa-envelope"></i><p>Email: <span class="colored1"><a href="mailto:contact@rusteddelusion.com">contact@rusteddelusion.com</a></span></p></li>
-			                    <li><i class="fa fa-twitter  fa-lg icon-social"></i><p>Twitter: <span class="colored1"><a href="https://twitter.com/RustedDelusion" target="_blank" rel="noopener noreferrer">@rusteddelusion</a></span></p></li>
-				                <li><i class="#"></i><p>Discord: <span class="colored1"><a href="https://discord.gg/2gwBRgp" target="_blank" rel="noopener noreferrer">Rusted Delusion Studios</a></span></p></li>
+                                <li> <span class="colored2"><i class="fa fa-envelope"></span></i><p><span class="colored1"><a href="mailto:contact@rusteddelusion.com">contact@rusteddelusion.com</a></span></p></li>
+			                    <li><span class="coloredTwitterBlue"><i class="fa fa-twitter  fa-lg icon-social"></span></i><p><span class="colored1"><a href="https://twitter.com/RustedDelusion" target="_blank" rel="noopener noreferrer">@RustedDelusion</a></span></p></li>
+				                <li><i class="fab fa-discord"></i><p><span class="colored1"><a href="https://discord.gg/2gwBRgp" target="_blank" rel="noopener noreferrer">Discord</a></span></p></li>
                             </ul>
                         </div>
                     </div>
@@ -297,7 +297,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <p id="copyright">&copy; Atypical Themes <span id="year"> </span></p><!-- Copyright Text -->
+                        <p id="copyright">&copy; Rusted Delusion Studios <span id="year"> </span></p><!-- Copyright Text -->
                         <ul class="social-links"> <!-- Social Media Icons -->
                            <!-- <li><a href="#"><i class="fa fa-facebook fa-lg icon-social"></i></a></li>-->
                            <!-- <li><a href="#"><i class="fa fa-twitter  fa-lg icon-social"></i></a></li> -->
