Removed nav links and changed text

--- a/404.html
+++ b/404.html
@@ -35,41 +35,15 @@
             <div class="container">
                 <!-- Site Logo -->
                 <a id="logo" class="navbar-brand" href="#"><img class="img-fluid" src="images/logo.png" alt="site logo"></a>
-                <!-- Dropdown Button -->
-                <button id="hamburger" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                </button>
-                <!-- Navigation Links -->
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#about">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#games">Games</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#team">Team</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#careers">Careers</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#contact">Contact</a>
-                        </li>
-                    </ul>
-                </div>
             </div>
         </nav>
     </header><!-- Header End -->
     <div id="container-404" class="container-fluid">
         <div class="row-fluid">
             <div class="col-md-12 text-center text-404">
-                <h1>GAME OVER</h1>
+                <h1>"Captain, I think we just entered the incorrect dimension"</h1>
                 <h3>Error 404 this page could not be found.</h3>
-                <a href="index.html" class="button">Take Me Back</a>
+                <a href="index.html" class="button"Back to Rusted Delusion Studios</a>
             </div>
         </div>
     </div>
