--- a/404.html
+++ b/404.html
@@ -43,7 +43,7 @@
             <div class="col-md-12 text-center text-404">
                 <h1>"Captain, I think we just entered the incorrect dimension"</h1>
                 <h3>Error 404 this page could not be found.</h3>
-                <a href="index.html" class="button"Back to Rusted Delusion Studios</a>
+                <a href="index.html" class="button"Take me back</a>
             </div>
         </div>
     </div>
