--- a/404.html
+++ b/404.html
@@ -34,16 +34,16 @@
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
             <div class="container">
                 <!-- Site Logo -->
-                <a id="logo" class="navbar-brand" href="#"><img class="img-fluid" src="images/logo.png" alt="site logo"></a>
+                <a id="logo" class="navbar-brand" href="#"><img class="img-fluid" src="images/logo.png" alt="site logo"></a>            
             </div>
         </nav>
     </header><!-- Header End -->
     <div id="container-404" class="container-fluid">
         <div class="row-fluid">
             <div class="col-md-12 text-center text-404">
-                <h1>"Captain, I think we just entered the incorrect dimension"</h1>
+                <h1><span class="colored2">Nothing Exists </span><span class="colored1">H</span><span class="colored2">ere...</span></h1>
                 <h3>Error 404 this page could not be found.</h3>
-                <a href="index.html" class="button"Take me back</a>
+                <a href="index.html" class="button">Turn Back</a>
             </div>
         </div>
     </div>
