Added a large image for OTFS

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                             </div>
                             <picture>
                                 <source media="(min-width: 1200px)" srcset="images/OTFS_SmallGameImage.jpg">
-                                <source media="(min-width: 768px)" srcset="images/game_large.jpg">
+                                <source media="(min-width: 768px)" srcset="images/OTFS_100x500.jpg">
                                 <img src="images/placeholder.jpg" data-src="images/OTFS_SmallGameImage.jpg" class="img-fluid b-lazy" alt="aurora image">
                             </picture>
                         </a>
@@ -205,8 +205,9 @@
                         <h2 class="short-hr-left">ON THE FLIP SIDE</h2>
                         <p class="tags"><span class="subtle">Arcade | Mobile</span></p>
                         <p class="game-description">Old is new again in this funky foot tapping endless runner for mobile. All you need to do is tap to change the world around you, all while corporate manifestations try to bring you down. Are you ready to flip to the other side?</p>
+						<p class="game-description">Coming soon to Google Play!</p>
                         <a href='#' target="_blank" rel="noopener noreferrer">
-						<img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png' width="220" height="90"/>
+					<!--<img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png' width="220" height="90"/>-->
 						</a>
 						<!--
                         <a href="#" class="button-store">
