--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                         <h2 class="short-hr-left">ON THE FLIP SIDE</h2>
                         <p class="tags"><span class="subtle">Arcade | Mobile</span></p>
                         <p class="game-description">Old is new again in this funky foot tapping endless runner for mobile. All you need to do is tap to change the world around you, all while corporate manifestations try to bring you down. Are you ready to flip to the other side?</p>
-						<p class="game-description">Coming soon to Google Play!</p>
+						<p class="game-description">Coming soon to Google Play on April 25th!</p>
                         <a href='#' target="_blank" rel="noopener noreferrer">
 					<!--<img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png' width="220" height="90"/>-->
 						</a>
